[package]
name = "render-metatable-creator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.1.12"
inject-render-in-yew={version="0.1.0",git="file://D:\\LAB\\Rust\\Project\\inject-render-in-yew"}
